[fix] text overflow while offline in the gallery image containers

--- a/src/pages/Gallery/ImageList/Image/image.css
+++ b/src/pages/Gallery/ImageList/Image/image.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--palette-pink-300);
+  font-size: var(--typography-body2-font-size);
 }
 
 .image img {
